Fixed 'name banner' and 'recording interface' overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -91,19 +91,28 @@ html {
 }
 
 #recordingInterface {
+	background-color: #007bff;
   color: white;
   display: flex;
-  flex-direction: column;
-  top: 0;
-  right: 0;
-  position: absolute;
+	align-items: center;
+	justify-content: space-between;
   z-index: 4;
+	margin-top: 10px;
+	padding: 10px 20px;
+	border-radius: 10px 0 0 10px;
 }
 
 #recordingInterface > div {
   display: flex;
   align-items: center;
-  padding: 10px;
+}
+
+#recordingInterface > button {
+	color: white;
+	background-color: transparent;
+	border: none;
+	font-size: 15px;
+	padding: 0;
 }
 
 #dot {
@@ -178,12 +187,16 @@ html {
   background-color: #0056b3;
 }
 
-.display-name-banner {
-  position: fixed;
-  top: 0;
-  right: 0;
+.name-banner {
   background-color: #007bff;
   color: white;
   padding: 10px 20px;
-  border-radius: 0 0 0 10px;
+  border-radius: 10px 0 0 10px;
+	margin-top: 10px;
+}
+
+#miscOverlay {
+	position: absolute;
+	top: 0;
+	right: 0;
 }
